--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="Images/logo-website.jpg" rel="icon">
+    <link href="././Images/logo-website.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,15 +23,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="./lib/animate/animate.min.css" rel="stylesheet">
+    <link href="./lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="./lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="./CSS/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./CSS/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -85,7 +85,7 @@
             <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="w-100" src="Images/carousel-1.jpg" alt="Image">
+                        <img class="w-100" src="./Images/carousel-1.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
 
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100" src="Images/carousel-2.jpg" alt="Image">
+                        <img class="w-100" src="./Images/carousel-2.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
 
@@ -159,19 +159,19 @@
                         <div class="row g-3">
                             <div class="col-6 text-end">
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.1s"
-                                    src="Images/about-1.jpg" style="margin-top: 25%;">
+                                    src="./Images/about-1.jpg" style="margin-top: 25%;">
                             </div>
                             <div class="col-6 text-start">
                                 <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s"
-                                    src="Images/about-2.jpg">
+                                    src="./Images/about-2.jpg">
                             </div>
                             <div class="col-6 text-end">
                                 <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s"
-                                    src="Images/about-3.jpg">
+                                    src="./Images/about-3.jpg">
                             </div>
                             <div class="col-6 text-start">
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.7s"
-                                    src="Images/airplane-flight.jpg">
+                                    src="./Images/airplane-flight.jpg">
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/destinations-1.jpg" alt="">
+                                <img class="img-fluid" src="./Images/destinations-1.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">10
                                     Tours</small>
@@ -213,7 +213,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/destinations-2.jpg" alt="">
+                                <img class="img-fluid" src="./Images/destinations-2.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">14
                                     Tours</small>
@@ -235,7 +235,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/destinations-3.jpg" alt="">
+                                <img class="img-fluid" src="./Images/destinations-3.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">18
                                     Tours</small>
@@ -316,7 +316,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-1.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-1.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -344,7 +344,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-2.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-2.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -372,7 +372,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-3.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-3.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -415,7 +415,7 @@
                             <div class="service-icon bg-transparent  rounded p-1">
                                 <div class="w-100 h-100   d-flex align-items-center justify-content-center">
                                     <!-- <i class="fa fa-hotel fa-2x txt-basic"></i> -->
-                                    <img src="./Images/category/icon2.png" alt="">
+                                    <img src="././Images/category/icon2.png" alt="">
                                 </div>
                             </div>
                             <h5 class="mb-3">Best Flights</h5>
@@ -426,7 +426,7 @@
                         <a class="service-item rounded" href="">
                             <div class="service-icon bg-transparent  rounded p-1">
                                 <div class="w-100 h-100   d-flex align-items-center justify-content-center">
-                                    <img src="./Images/category/icon1.png" alt="">
+                                    <img src="././Images/category/icon1.png" alt="">
 
                                 </div>
                             </div>
@@ -439,7 +439,7 @@
                             <div class="service-icon bg-transparent  rounded p-1">
                                 <div class="w-100 h-100   d-flex align-items-center justify-content-center">
                                     <!-- <i class="fa fa-spa fa-2x txt-basic"></i> -->
-                                    <img src="./Images/category/icon4.png" alt="">
+                                    <img src="././Images/category/icon4.png" alt="">
 
                                 </div>
                             </div>
@@ -464,7 +464,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="rounded shadow overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/team-1.jpg" alt="">
+                                <img class="img-fluid" src="./Images/team-1.jpg" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square btn-basic text-white mx-1" href=""><i
@@ -484,7 +484,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="rounded shadow overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/team-2.jpg" alt="">
+                                <img class="img-fluid" src="./Images/team-2.jpg" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square btn-basic text-white mx-1" href=""><i
@@ -504,7 +504,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="rounded shadow overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/team-3.jpg" alt="">
+                                <img class="img-fluid" src="./Images/team-3.jpg" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square btn-basic text-white mx-1" href=""><i
@@ -524,7 +524,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="rounded shadow overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/team-4.jpg" alt="">
+                                <img class="img-fluid" src="./Images/team-4.jpg" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square btn-basic text-white mx-1" href=""><i
@@ -651,17 +651,17 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="./lib/wow/wow.min.js"></script>
+    <script src="./lib/easing/easing.min.js"></script>
+    <script src="./lib/waypoints/waypoints.min.js"></script>
+    <script src="./lib/counterup/counterup.min.js"></script>
+    <script src="./lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="./lib/tempusdominus/js/moment.min.js"></script>
+    <script src="./lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="./lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+  <!-- Template Javascript -->
+  <script src="./JS/main.js"></script>
 </body>
 
 </html>
