--- a/tours.html
+++ b/tours.html
@@ -8,7 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
     <!-- Favicon -->
-    <link href="Images/logo-website.jpg" rel="icon">
+    <link href="./Images/logo-website.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,15 +22,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="./lib/animate/animate.min.css" rel="stylesheet">
+    <link href="./lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="./lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="./CSS/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./CSS/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -89,7 +89,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-1.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-1.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -117,7 +117,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-2.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-2.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -145,7 +145,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-3.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-3.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -173,7 +173,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-4.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-4.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -201,7 +201,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-5.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-5.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -229,7 +229,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="Images/tours-6.jpg" alt="">
+                                <img class="img-fluid" src="./Images/tours-6.jpg" alt="">
                                 <small
                                     class="position-absolute start-0 top-100 translate-middle-y bg-basic text-white rounded py-1 px-3 ms-4">$5000</small>
                             </div>
@@ -361,17 +361,17 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="./lib/wow/wow.min.js"></script>
+    <script src="./lib/easing/easing.min.js"></script>
+    <script src="./lib/waypoints/waypoints.min.js"></script>
+    <script src="./lib/counterup/counterup.min.js"></script>
+    <script src="./lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="./lib/tempusdominus/js/moment.min.js"></script>
+    <script src="./lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="./lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 
 </html>
